修改登录流程、协议

--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -200,7 +200,9 @@
 					//检查 "登录状态/锁屏状态" 结束
 					var loginButton = doc.getElementById('login');
 					var accountBox = doc.getElementById('account');
+					accountBox.value = '';
 					var passwordBox = doc.getElementById('password');
+					passwordBox.value = '';
 					//					var autoLoginButton = doc.getElementById("autoLogin");
 					var regButton = doc.getElementById('reg');
 					//					var forgetButton = doc.getElementById('forgetPassword');
