--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -20,11 +20,11 @@
 			<form class="mui-input-group">
 				<div id="old-password" class="mui-input-row" style="display: none;">
 					<label>原密码</label>
-					<input type="text" id="phoneNumber" placeholder="请输入原密码">
+					<input type="password" id="phoneNumber" placeholder="请输入原密码">
 				</div>
 				<div class="mui-input-row">
 					<label>新密码</label>
-					<input type="password" id="password0"  placeholder="输入新密码">
+					<input type="password" id="password0" placeholder="输入新密码">
 				</div>
 				<div class="mui-input-row">
 					<label>新密码</label>
@@ -63,16 +63,24 @@
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
-				var tempFlag = 0; //0我普通，1为修改密码，2为设置密码
+				var tempFlag = 0; //0我普通，1为设置修改密码，2为注册后设置密码，3为退出登录时设置密码
 				//获取当前页面
 				var curPage = plus.webview.currentWebview();
 				var oldPassword = document.getElementById('old-password');
 				var navTitle = document.getElementById('navTitle');
 				var back = document.getElementById('back');
 				var phoneNumber = document.getElementById("phoneNumber"); //原密码
+				phoneNumber.value = '';
 				var unickName = document.getElementById("unickName"); //昵称
+				unickName.value = '';
 				var unickName0 = document.getElementById("unickName0"); //昵称
-				//修改密码
+				unickName0.value = '';
+				var password0 = document.getElementById("password0"); //昵称
+				password0.value = '';
+				var password1 = document.getElementById("password1"); //昵称
+				password1.value = '';
+
+				//设置里面修改密码
 				window.addEventListener('changePasswords', function() {
 					console.log('111111');
 					oldPassword.style.display = 'block';
@@ -81,15 +89,26 @@
 					unickName0.style.display = 'none';
 					tempFlag = 1;
 				});
-				//设置密码
+				//设置里面退出时设置密码
 				window.addEventListener('settingPW', function() {
+					back.style.display = 'inline-block';
+					tempFlag = 3;
+					navTitle.innerHTML = '设置密码';
+					unickName.style.display = 'block';
+					oldPassword.style.display = 'none';
+					document.getElementById('cancelBtn').style.display = 'none';
+					console.log('333333');
+				});
+				
+				//从验证码界面登录或者注册时
+				window.addEventListener('registerPW', function() {
 					back.style.display = 'inline-block';
 					tempFlag = 2;
 					navTitle.innerHTML = '设置密码';
 					unickName.style.display = 'block';
 					oldPassword.style.display = 'none';
 					document.getElementById('cancelBtn').style.display = 'none';
-					console.log('222222');
+					console.log('22222');
 				});
 				//上级传值如果是1，是修改密码
 				//				if(curPage.data&&curPage.data==1){
@@ -161,7 +180,7 @@
 							var enData = {
 								utid: personalUTID,
 								pw: document.getElementById("password0").value,
-								vvl:document.getElementById("old-password").value //旧密码
+								vvl: document.getElementById("phoneNumber").value //旧密码
 							};
 							//不需要加密的数据
 							var comData = {
@@ -173,7 +192,7 @@
 									//								vvl://
 							};
 							//发送网络请求，data为网络返回值
-							if(tempFlag == 0 || tempFlag == 2) {
+							if(tempFlag == 0 || tempFlag == 2 || tempFlag == 3) {
 								comData.vtp = 'np'; //np(新建密码),rp(修改密码)
 								enData.vvl = '';
 								//6.用户修改各项用户信息
@@ -189,14 +208,14 @@
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.unick = unickName.value;
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
-									} 
+									}
 								});
-							} else if(tempFlag == 1){ //修改密码，需要原先密码
+							} else if(tempFlag == 1) { //修改密码，需要原先密码
 								comData.vtp = 'rp'; //np(新建密码),rp(修改密码)
-								
+
 							}
-							console.log('comData:'+JSON.stringify(comData));
-							console.log('enData:'+JSON.stringify(enData));
+							console.log('comData:' + JSON.stringify(comData));
+							console.log('enData:' + JSON.stringify(enData));
 							postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
 								//成功，关闭等待框
 								wd.close();
@@ -205,13 +224,23 @@
 									mui.toast(data.RspTxt);
 									return;
 								} else {
+									phoneNumber.value = '';
+									unickName.value = '';
+									unickName0.value = '';
+									password0.value = '';
+									password1.value = '';
 									if(tempFlag == 0) {
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 										mui.toast('修改密码成功');
 										events.openNewWindowWithData('../index/index.html', '');
-									} else { //在设置里面退出时，设置密码
+									} else if(tempFlag == 1) {//在设置里，修改密码
+										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+										tempInfo.ispw = '1';
+										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
+										mui.toast('修改密码成功');
+									} else if(tempFlag == 3) {//在设置里，退出时设置密码
 										//修改自动登录值
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
 										//跳转到登录界面
