--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -18,7 +18,7 @@
 		<div class="mui-content">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right" id="yinsi" href="privacy.html">
+					<a class="mui-navigate-right" id="yinsi">
 						隐私
 					</a>
 				</li>
@@ -47,14 +47,13 @@
 			mui.plusReady(function() {
 				//隐私
 				events.addTap('yinsi', function() {
-					console.log('xiu gai mi ma ');
+					mui.toast('此功能暂未开放');
 				});
 				//修改密码
 				events.preload('../register/modify_password.html');
 				events.addTap('change-passwords', function() {
 						events.fireToPageNone('../register/modify_password.html', 'changePasswords');
-						plus.webview.getWebviewById('../register/modify_password.html').show();
-//						events.openNewWindow('../register/modify_password.html');
+						events.openNewWindow('../register/modify_password.html');
 					})
 					//退出
 				events.addTap('quit', function() {
