留言板界面修改主人寄语协议

--- a/JiaoBaoYun-hb/html/quan/leave-sub.html
+++ b/JiaoBaoYun-hb/html/quan/leave-sub.html
@@ -85,12 +85,13 @@
 		});
 		var userId;
 		var personalUTID;
+		personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 		mui.plusReady(function() {
 			window.addEventListener('refreshLeaveList',function(){
 				requestData(comData)
 			})
 			userId = plus.webview.currentWebview().data;
-		    personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
+		    
 
 				var comData = {
 					userId: userId, //用户ID
@@ -242,6 +243,29 @@
 				}
 			});
 		}
+		
+		//修改主人寄语
+		function modifyMaster() {
+			//需要加密的数据
+			var tempData = {
+				userId: personalUTID,//用户ID
+				note:''//备注，即主人寄语
+			}
+			// 等待的对话框
+			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			//60.（用户空间）修改留言板备注
+			postDataPro_setMsgNoteByUser(tempData, wd, function(data) {
+				wd.close();
+				console.log('60.postDataPro_setMsgNoteByUsersuccess:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+				if(data.RspCode == 0) {
+					//修改界面寄语
+					
+				}else{
+					mui.toast(data.RspTxt);
+				}
+			});
+		};
+		
 //				"TabId": 6,
 //              "MsgContent": "我也谢谢",
 //              "ReplyId": 3,
@@ -276,28 +300,13 @@
 				}
 					li.innerHTML = '<div style="padding:12px"><div class="mui-media-body mui-pull-left"><img class=" dynamic-personal-image" src="'+leaveArray[i].uimg+'../../image/dynamic/u101.png"></div><div class="mui-media-body dynamic-padding-left-10px"><span id="reply'
 					+i+'"class=" mui-pull-right dynamic-comment-name leaveReply">'+replyHTML +
-					'</span><h4>' + leaveArray[i].unick + '</h4><p>' + leaveArray[i].MsgDate + '</p></div></div><div style="padding:0px 10px 10px 10px"><font>'+leaveArray[i].MsgContent+'</font></div>'+commentHTML; 
-
-
-					ul.appendChild(li);
-			}
-					mui('.mui-table-view').on('tap', '.leaveReply', function() {
-						var cellIndex = this.id.replace('reply','');
-						console.log(cellIndex)
-//						var userserId = leaveArray[cellIndex].UserId;//留言用户ID
-//						var upperId = leaveArray[cellIndex].UpperId;//上级留言ID
-//						var replyUserId = leaveArray[cellIndex].ReplyId;//回复ID
-//						var userOwnerId = publisherId;//用户ID
-//						var msgContent = '今天天气真好';//回复内容
-						var data = {
-							userId:leaveArray[cellIndex].UserId,
-							upperId:leaveArray[cellIndex].TabId,
-							replyUserId:leaveArray[cellIndex].ReplyId,
-							userOwnerId:userId,
-						}
-						events.openNewWindowWithData('leave-reply.html',data);
-						});
-		}
+					'</span><h4>' + leaveArray[i].unick + '</h4>
+					<p>' + leaveArray[i].MsgDate + '</p>
+				</div>
+			</div>
+			<div style="padding:0px 10px 10px 10px">
+				<font>'+leaveArray[i].MsgContent+'</font>
+			</div>'+commentHTML; ul.appendChild(li); } mui('.mui-table-view').on('tap', '.leaveReply', function() { var cellIndex = this.id.replace('reply',''); console.log(cellIndex) // var userserId = leaveArray[cellIndex].UserId;//留言用户ID // var upperId = leaveArray[cellIndex].UpperId;//上级留言ID // var replyUserId = leaveArray[cellIndex].ReplyId;//回复ID // var userOwnerId = publisherId;//用户ID // var msgContent = '今天天气真好';//回复内容 var data = { userId:leaveArray[cellIndex].UserId, upperId:leaveArray[cellIndex].TabId, replyUserId:leaveArray[cellIndex].ReplyId, userOwnerId:userId, } events.openNewWindowWithData('leave-reply.html',data); }); }
 			</script>
 
 </html>
