--- a/JiaoBaoYun-hb/html/quan/aboutme.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme.html
@@ -9,7 +9,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-		<link rel="stylesheet" href="../../css/quan/about-me.css" />
+		<!--<link rel="stylesheet" href="../../css/quan/about-me.css" />-->
 		<script src="../../js/mui.min.js"></script>
 	</head>
 
@@ -18,7 +18,9 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left common-color-white"></a>
 			<h1 class="mui-title common-color-white common-font-family-Regular">与我相关</h1>
 		</header>
+		
 		<div class="mui-content"></div>
+		
 	</body>
 
 	<script type="text/javascript">
