--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -22,6 +22,12 @@
 		    </ul>
 		  </div>
 		</div>
+		<footer>
+			<div class="footer-center">
+				<textarea id='msg-text' type="text" class='input-text'></textarea>
+			</div>
+			<button id='btn-commit' class="mui-btn mui-btn-green btn-commit">提交</button>
+		</footer>
 		<script src="../../js/mui.min.js"></script>
 		<!--<script type="text/javascript" src="../../js/quan/aboutme.js"></script>-->
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
