与我相关回复功能 等待接口对接

--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -22,9 +22,9 @@
 		    </ul>
 		  </div>
 		</div>
-		<footer>
+		<footer id="footer">
 			<div class="footer-center">
-				<textarea id='msg-text' type="text" class='input-text'></textarea>
+				<textarea id='msg-content' type="text" class='input-text'></textarea>
 			</div>
 			<button id='btn-commit' class="mui-btn mui-btn-green btn-commit">提交</button>
 		</footer>
