--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -537,7 +537,8 @@
 					document.getElementById("record_row").appendChild(div);
 					//学习轨迹监听
 					div.addEventListener('tap', function() {
-						events.openNewWindow('record_learningpath_main.html');
+						mui.toast('功能暂未开放');
+						//events.openNewWindow('record_learningpath_main.html');
 					});
 				}
 
