--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<title></title>
@@ -13,31 +14,32 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left">我的云盘—笔记</a>
-			<a class="mui-icon mui-icon-plus mui-pull-right"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">我的云盘—笔记</h1>
 		</header>
+
 		<div class="mui-content"></div>
 	</body>
 
 	<script type="text/javascript">
 		//启用双击监听
 		mui.init({
-			gestureConfig:{
-				doubletap:true
+			gestureConfig: {
+				doubletap: true
 			},
-			subpages:[{
-				url:'app_notes_sub.html',
-				id:'app_notes_sub.html',
-				styles:{
+			subpages: [{
+				url: 'app_notes_sub.html',
+				id: 'app_notes_sub.html',
+				styles: {
 					top: '45px',
-					bottom: '0px',
+					bottom: localStorage.getItem('$Statusbar')
 				}
 			}]
 		});
 
 		var contentWebview = null;
-		document.querySelector('header').addEventListener('doubletap',function () {
-			if(contentWebview==null){
+		document.querySelector('header').addEventListener('doubletap', function() {
+			if(contentWebview == null) {
 				contentWebview = plus.webview.currentWebview().children()[0];
 			}
 			contentWebview.evalJS("mui('#pullrefresh').pullRefresh().scrollTo(0,0,100)");
