发布班级空间信息后，更新上个页面

--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -78,6 +78,7 @@
 					if(data.RspCode = '0000') {
 						mui.toast('发布成功！');
 						document.getElementById('input-content').value='';
+						events.fireToPageNone('classSpace-sub.html','infoChanged');
 						//					mui.fire('classSpace-sub.html','refershData');
 						mui.back();
 					} else {
