物暂无昵称
设置暂无昵称

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -168,7 +168,7 @@
 					document.getElementById('uimg').src = '../../image/utils/default_personalimage.png';
 				}
 				if(info.uname) {
-					document.getElementById('uname').innerText = info.unick?info.unick:info.uname;
+					document.getElementById('uname').innerText = info.unick?info.unick:"暂无昵称";
 				}
 				if(info.utxt) {
 					document.getElementById('utext').innerText = info.utxt;
