--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -20,7 +20,7 @@
 
 			<div id="title" class="title">
 				<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
-				<h4 id="uname">姓名</h4>
+				<h4 id="uname">暂无昵称</h4>
 				<p id="utext">暂无信息</p>
 			</div>
 
@@ -167,9 +167,8 @@
 				} else {
 					document.getElementById('uimg').src = '../../image/utils/default_personalimage.png';
 				}
-				if(info.uname) {
+				
 					document.getElementById('uname').innerText = info.unick?info.unick:"暂无昵称";
-				}
 				if(info.utxt) {
 					document.getElementById('utext').innerText = info.utxt;
 				} else {
