--- a/JiaoBaoYun-hb/html/quan/leave-sub.html
+++ b/JiaoBaoYun-hb/html/quan/leave-sub.html
@@ -306,17 +306,17 @@
 			mui('.mui-table-view').on('tap', '.leaveReply', function() {
 				var cellIndex = this.id.replace('reply',''); console.log(cellIndex)
 				//
-				var userserId = leaveArray[cellIndex].UserId;
-				//留言用户ID
-				//
-				var upperId = leaveArray[cellIndex].UpperId;//上级留言ID // 
-				var replyUserId = leaveArray[cellIndex].ReplyId;//回复ID // 
-				var userOwnerId = publisherId;//用户ID // 
-				var msgContent = '今天天气真好';//回复内容 
+//				var userserId = leaveArray[cellIndex].UserId;
+//				//留言用户ID
+//				//
+//				var upperId = leaveArray[cellIndex].UpperId;//上级留言ID // 
+//				var replyUserId = leaveArray[cellIndex].ReplyId;//回复ID // 
+//				var userOwnerId = publisherId;//用户ID // 
+//				var msgContent = '今天天气真好';//回复内容 
 				var data = {
-					userId:leaveArray[cellIndex].UserId,
+					userId:personalUTID,
 					upperId:leaveArray[cellIndex].TabId,
-					replyUserId:leaveArray[cellIndex].ReplyId,
+					replyUserId:leaveArray[cellIndex].UserId,
 					userOwnerId:userId,
 				}
 				events.openNewWindowWithData('leave-reply.html',data); 
