--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -136,6 +136,12 @@
 						</li>
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
+								<label>手机号:</label>
+								<input id="tea_uid" type="text" class="mui-input-clear" disabled>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
 								<label>昵称:</label>
 								<input id="tea_ugname" type="text" class="mui-input-clear" disabled>
 							</div>
@@ -208,6 +214,7 @@
 				//---老师界面中相关的元素---start---
 				var tea_name = document.getElementById("tea_name"); //老师姓名
 				var tea_utid = document.getElementById("tea_utid"); //老师账号
+				var tea_uid = document.getElementById("tea_uid"); //老师手机号
 				var tea_ugname = document.getElementById("tea_ugname"); //老师群昵称
 				var tea_gender = document.getElementById("tea_gender"); //老师性别
 				var tea_gname = document.getElementById("tea_gname"); //老师所属群
@@ -335,6 +342,7 @@
 					if(role != 1) {
 						tea_name.setAttribute('disabled', 'disabled'); //老师姓名
 						tea_utid.setAttribute('disabled', 'disabled'); //老师账号
+						tea_uid.setAttribute('disabled', 'disabled'); //老师手机号
 						tea_ugname.setAttribute('disabled', 'disabled'); //老师群昵称
 						tea_gender.setAttribute('disabled', 'disabled'); //老师性别
 						//tea_gname.setAttribute('disabled', 'disabled');//老师所属群
@@ -536,6 +544,7 @@
 								} else if(uData.usex == 0) {
 									tea_gender.innerText = '男';
 								}
+								tea_uid.value = uData.uid;
 								tea_utid.value = uData.uname;
 								tea_introduction.value = uData.utxt;
 							}
