--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -68,6 +68,7 @@
 						console.log('更改后信息:'+JSON.stringify(pInfo));
 						mui.fire(curpage.opener(),'infoChanged');
 						events.fireToPageNone('mine.html','infoChanged');
+//						events.fireToPageNone('../index/index.html','infoChanged');
 						events.fireToPageNone('classSpace-sub.html','infoChanged');
 						mui.back()
 					}else{
